--- a/client/src/signUpPage.css
+++ b/client/src/signUpPage.css
@@ -61,7 +61,7 @@
   input {
     margin-bottom: 10px;
     padding: 10px;
-    width: 70%;
+    width: 300px;
     box-sizing: border-box;
     border: 1px solid #057209; /* Add a border */
     border-radius: 10px; /* Round the corners */
@@ -127,7 +127,7 @@
 .center-input {
     text-align: center;
     
-        width: 50%;
+        width: 100%;
       
    
 
@@ -143,8 +143,8 @@
   .loginboxs {
     display: flex;
     flex-direction: column;
-    gap: 0px;
-
+    gap: 20px;
+    margin-top: 120px;
     
   }
   
@@ -153,5 +153,4 @@
     flex-direction: column;
     align-items: center; /* Center align inputs vertically within twin-inputs */
     gap: 0px;
-    margin-top: -50px;
   }
