--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,7 @@
   color: #ffffff;
   background-color:rgb(78, 102, 106); 
   width: 30%;
+  margin-bottom: 10px;
 }
 .right-Top-Div{
   display: inline-block; 
