--- a/client/src/Modal.css
+++ b/client/src/Modal.css
@@ -8,7 +8,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+ 
+  
 }
 
 /* Modal Content */
@@ -20,8 +21,8 @@
   max-width: 60%;
   max-height: 70%;
   overflow: hidden;
-  position: relative;
- 
+  position:  fixed;
+
   width: 100%;
   height: 100%;
   display: flex; /* Change display to flex */
@@ -156,109 +157,7 @@ overflow: auto;
    height: 10px;
 }
 
-/* .comment-text-container {
-  max-height: 50px; 
-  overflow: auto;
-  
-}
 
-.comment-text {
-  margin: 0;
-}
-
-.comment-info {
-  font-size: 12px;
-  color: #26933a;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
- 
-}
-.comment-input-container {
-  margin-top: -10px;
-  display: flex;
-  align-items: center;
-  width: 800px;
-  margin-left: 10PX;
-}
-
-.comment-input-container input {
-  flex: 1;
-  padding: 5px;
-  border: 1px solid #11c832;
-  border-radius: 4px;
-}
-
-.comment-input-container button {
-  margin-left: 10px;
-  padding: 5px 10px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comment-input-container button:hover {
-  background-color: #0056b3;
-}
-.comments-list{
-    overflow-y: auto;
-    max-height: 300px;
-    margin-top: -200px;
-}
-.eventImage {
-  max-width: 100%;
-  height: auto; 
-  object-fit: cover;
-  border-radius: 8px 8px 0 0;
-  max-height: 350px;
-  margin-left: 0; 
-  min-width: 450px ;
-  min-height: 120px;
-max-width: 500px;
-}
-
-.left-div {
-  flex:1;
-  
-  padding: 10px;
-  margin-right: 15px; 
-  max-height: 250px;
-  overflow: auto; 
-  min-height: 300px;
-  margin-bottom: 10px;
-}
-.right-div {
-  flex: 1;
-  flex-direction: column;
-  padding: 10px;
-  margin-left: 10px;
-  
-}
-
-.title-des {
-  position: absolute;
-  top: 0px; 
-  right: 10px; 
- 
-  padding: 10px;
-  max-width: calc(50% - 20px); 
-  z-index: 1; 
-}
-
-.title-des h2 {
-  font-family: "Your Custom Font", sans-serif; 
-  font-size: 40px; 
-  margin-bottom: 50px; 
-}
-
-.title-des p {
-  margin-top: 180px; 
-  font-size: 15px; 
-}
-
-*/
 
 .delete-icon {
   width: 20px; 
