--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,8 @@
 
 .background-container {
   overflow: hidden;
+display: flex;
+flex-direction: column;
  
 }
 .top-div {
@@ -50,6 +52,20 @@
   background-color:rgb(78, 102, 106); 
   width: 30%;
   margin-bottom: 10px;
+  
+}
+.ViewButton1 {
+  border-radius: 8px;
+  color: #ffffff;
+  background-color:rgb(78, 102, 106); 
+  width: 30%;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+
+  text-decoration: none;
+  height: 30px;
 }
 .right-Top-Div{
   display: inline-block; 
@@ -145,22 +161,79 @@
   display: flex;
   background-color: aliceblue;
   width: 100%;
-  height: 800px;
+  height: 730px;
+}
+.orange-hr {
+  border: none;
+  background-color: rgb(131, 213, 245);
+  height: 10px; /* Adjust the height as needed */
+  width:30%;
+  margin: 15px 0; 
+  border-radius: 40px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  height: 100%;
+  width: 80%;
+  justify-content: center;
+ align-items: center;
+  margin-left: 5%;
+
+}
+
+.column1 {
+  margin:0;
+  padding: 0;
+  width: 50%;
+  border-radius: 5px;
+  height: 400px;
+  
+}
+  
+.column2 {
+margin-left: -80px;
+  width: 50%;
+  border-radius: 5px;
+  height: 400px;
+  
+}
+.grid-container ul {
+
+  list-style: none;
+  padding: 0;
+  
+}
+
+.grid-container li {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  height: 40px;
+  margin: 5px 0;
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(161, 150, 150);
 }
 
 
-
-
-
-
-
-
-
-
-
+li:hover {
+  color: rgb(93, 186, 230);
+  font-weight: 800;
+  font-size: 20px;
+}
+.grid-container ul h6 { 
+  font-size: 18px;
+  color: rgb(78, 102, 106); 
+  font-weight: 600;
+  margin: 0%;
+  padding: 0%;
+  margin-bottom: 20px;
+} 
 
 .Buttom-of-Page{
   background-color: rgb(243, 248, 248);
   width: 100%;
   height: 500px;
+
 }
+
