--- a/client/src/event.css
+++ b/client/src/event.css
@@ -5,6 +5,7 @@ text-align: center;
 align-items: center;
 
 
+
 }
 .event-Div1 button {
         margin-top: 10px;
@@ -13,6 +14,7 @@ align-items: center;
         height: 46px;
         background-color: rgb(78, 102, 106); 
         font-size: 13px;
+        cursor: pointer;
 }
 .viewbutton{
     margin-top: 50px;
@@ -21,7 +23,9 @@ align-items: center;
     height: 46px;
     background-color: rgb(78, 102, 106); 
     font-size: 13px;
+    cursor: pointer;
 }
+
 .event-Div p1 {
 font-size: 50px;
 font-weight: 900;
@@ -29,12 +33,23 @@ margin-bottom: 20px;
 margin-top: 20px;
 color: rgb(74, 71, 71);
 }
-.event-list {
+.event-listt {
     display: flex;
     white-space: nowrap;
-    
     overflow-x: auto;
+    
     width: 100%;
+}
+.event-listt::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+   
+}
+
+.event-listt::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: rgb(78, 102, 106);
+    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
 
@@ -46,11 +61,11 @@ color: rgb(74, 71, 71);
     max-height: 500px;
     margin: 10px;
     background-color: rgb(240, 238, 238);
-    overflow: hidden;
+    
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    white-space: nowrap;
+  
     position: relative;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
     
@@ -74,6 +89,7 @@ color: rgb(74, 71, 71);
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     color: white; /* Text color */
+    cursor: pointer;
 
 }
 .edit-button:hover{
@@ -115,11 +131,13 @@ color: rgb(74, 71, 71);
 
 .card-user-id button{
 width: 200px;
+cursor: pointer;
 }
 .TapButton {
     width: 100%;
     display: flex;
     justify-content: center;
+    
 }
 .TapButton-Button {
      width: 13%;
@@ -128,6 +146,7 @@ width: 200px;
     background-color: rgb(78, 102, 106); 
     font-size: 13px;
     color: white;
+    cursor: pointer;
 }
 .ViewButton2 {
     display: flex;
@@ -141,4 +160,8 @@ width: 200px;
     text-decoration: none;
     color: white;
     margin-top: 30px;
+    cursor: pointer;
+}
+.ViewButton {
+    cursor: pointer;
 }
