--- a/client/src/listingPage.css
+++ b/client/src/listingPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 .SearchContainer{
   display: flex;
@@ -26,7 +27,7 @@ flex-direction: column;
 }
 .events-container{
     width: 90%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     height: auto    ;
     display: grid;
     overflow: hidden;
